[tool.poetry]
name = "wolontariapp"
version = "0.1.0"
description = "REST Full API for wolontariapp"
authors = ["Roland Sobczak <rolandsobczak@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
gunicorn = "^21.2.0"
fastapi-users = {extras = ["beanie"], version = "^12.1.2"}
environs = "^9.5.0"
fastapi-permissions = "^0.2.7"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
azure-storage-blob = "^12.18.2"
azure-identity = "^1.14.0"
black = "^23.9.1"
pydantic-async-validation = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
